<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageViewLogin"
        android:layout_width="210dp"
        android:layout_height="266dp"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:src="@drawable/healthcare" /> <!-- forma correta de carregar imagens -->
    <!-- android:src="@tools:sample/avatars" -->

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:text="@string/login_Title"
        android:textColor="@color/pinklight"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:background="@drawable/rounded_card"
        android:ems="10"
        android:hint="@string/login_user"
        android:inputType="text"
        android:padding="10dp"
        android:text="" /> <!-- Placeholder -->

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:background="@drawable/rounded_card"
        android:ems="10"
        android:hint="@string/login_password"
        android:inputType="text"
        android:padding="10dp" />

    <Button
        android:id="@+id/buttonCadastrar"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="101dp"
        android:minHeight="10dp"
        android:padding="0dp"
        android:text="@string/login_buttonCadastrar"
        android:textColor="@color/yellowlight" />

    <Button
        android:id="@+id/buttonRedefinirSenha"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="101dp"
        android:minHeight="10dp"
        android:paddingLeft="5dp"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:text="@string/login_buttonRedefinirSenha"
        android:textColor="@color/yellowlight" />

    <Button
        android:id="@+id/buttonEntrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:backgroundTint="@color/pinklight"
        android:minWidth="210dip"
        android:text="@string/login_buttonEntrar"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp" />
</LinearLayout>