<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddMetas">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/bluedark"
        android:padding="1dp"
        android:src="@drawable/healthcare" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonDomAddCalorias"
            android:layout_width="45dp"
            android:layout_height="55dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/green"
            android:padding="7dp"
            android:text="Dom"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonSegAddCalorias"
            android:layout_width="45dp"
            android:layout_height="55dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:padding="7dp"
            android:text="Seg"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonTerAddCalorias"
            android:layout_width="45dp"
            android:layout_height="55dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:padding="7dp"
            android:text="Ter"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonQuaAddCalorias"
            android:layout_width="45dp"
            android:layout_height="55dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:padding="7dp"
            android:text="Qua"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonQuiAddCalorias"
            android:layout_width="45dp"
            android:layout_height="55dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:padding="7dp"
            android:text="Qui"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonSexAddCalorias"
            android:layout_width="45dp"
            android:layout_height="55dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:padding="7dp"
            android:text="Sex"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonSabAddCalorias"
            android:layout_width="45dp"
            android:layout_height="55dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:padding="7dp"
            android:text="Sáb"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageViewAddMetas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/metas" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewQualObjetivoAddMetas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/cadastrar_metas_Title"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <RadioGroup
            android:id="@+id/objetivo"
            android:layout_width="339dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/ganhar"
                android:layout_width="178dp"
                android:layout_height="wrap_content"
                android:text="Ganhar Peso"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/perder"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="Perder Peso"
                android:textSize="18sp"
                android:textStyle="bold" />

        </RadioGroup>

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="10dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/editTextPesoAtualGanharPesoAddMetas"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/rounded_card"
                    android:ems="10"
                    android:hint="@string/cadastrar_metas_pesoAtual"
                    android:inputType="number|numberDecimal"
                    android:padding="10dp"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/editTextPesoDesejadoGanharPesoAddMetas"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/rounded_card"
                    android:ems="10"
                    android:hint="@string/cadastrar_metas_desejado"
                    android:inputType="number|numberDecimal"
                    android:padding="10dp"
                    android:textSize="16sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/editTextQuantoTempoGanharPesoAddMetas"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/rounded_card"
                    android:ems="10"
                    android:hint="@string/cadastrar_metas_emQuantoTempo"
                    android:inputType="number"
                    android:padding="10dp"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/editTextMetaGanharAltura"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/rounded_card"
                    android:ems="10"
                    android:hint="Altura"
                    android:inputType="number|numberDecimal"
                    android:padding="10dp"
                    android:textSize="16sp" />
            </TableRow>

        </TableLayout>

        <TextView
            android:id="@+id/SexoText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Qual é o seu Sexo?"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/sexo"
            android:layout_width="339dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/masculino"
                android:layout_width="178dp"
                android:layout_height="wrap_content"
                android:text="Masculino"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/feminino"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="Feminino"
                android:textSize="18sp"
                android:textStyle="bold" />

        </RadioGroup>
    </LinearLayout>


    <Button
        android:id="@+id/buttonAvancarAddMetas"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:minWidth="210dip"
        android:text="@string/cadastrar_metas_ButtonAvancar"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:backgroundTint="@color/pinklight"
        />

</LinearLayout>